// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="labelStyle"
  >
    LabelChild
  </div>
</DocumentFragment>
`;

exports[`<Label /> when draggable lineThrough className specified should render properly 1`] = `
<DocumentFragment>
  <div
    class="labelLineThroughstyle testClass"
    data-draggable="true"
  >
    LabelChild
  </div>
</DocumentFragment>
`;
